Fixed various issues in default MVC Identity views.
Removed Login/Register links from the navbar.
Added missing containers in views.
Added localization strings.
Enabled email sending for forgotten password.

...and a lot more.

--- a/Web/NbuReservationSystem.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,6 +1,6 @@
-﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @{
-    ViewBag.Title = "Forgot Password Confirmation";
+    ViewBag.Title = AccountLabels.NextStep;
 }
 
 <div class="container">
