--- a/Web/NbuReservationSystem.Web/Views/Account/Register.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/Register.cshtml
@@ -1,5 +1,5 @@
-﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
-@model NbuReservationSystem.Web.ViewModels.Account.RegisterViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Requests.Account.RegisterViewModel
 @{
     ViewBag.Title = AccountLabels.RegisterNewAccount;
 }
