--- a/Web/NbuReservationSystem.Web/Views/Account/ResetPassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ResetPassword.cshtml
@@ -1,5 +1,5 @@
-﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
-@model NbuReservationSystem.Web.ViewModels.Account.ResetPasswordViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Requests.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = AccountLabels.ResetPassword;
 }
@@ -21,6 +21,7 @@
                     @Html.LabelFor(m => m.Email, AccountLabels.Email, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email)
                     </div>
                 </div>
                 <div class="form-group">
@@ -42,8 +43,8 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="reset" class="btn btn-default" value="@Resources.Buttons.Clear" />
-                        <input type="submit" class="btn btn-default" value="@Resources.Buttons.Submit" />
+                        <input type="reset" class="btn btn-default" value="@ButtonsLabels.Clear" />
+                        <input type="submit" class="btn btn-default" value="@ButtonsLabels.Submit" />
                     </div>
                 </div>
             }
