--- a/Web/NbuReservationSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
 @{
     ViewBag.Title = AccountLabels.SuccessfulPasswordChange;
 }
@@ -10,7 +10,7 @@
 
             <hr/>
             <p>
-                @AccountLabels.SuccessfulPasswordChange. @Html.ActionLink(AccountLabels.SuccessfulPasswordChangeNextStep, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                @AccountLabels.SuccessfulPasswordChange @Html.ActionLink(AccountLabels.SuccessfulPasswordChangeNextStep, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
             </p>
         </div>
     </div>
