--- a/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Manage/ChangePassword.cshtml
@@ -1,7 +1,7 @@
-﻿@using NbuReservationSystem.Web.App_GlobalResources.Account
-@model NbuReservationSystem.Web.ViewModels.Manage.ChangePasswordViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Requests.Manage.ChangePasswordViewModel
 @{
-    ViewBag.Title = "Change Password";
+    ViewBag.Title = AccountLabels.ChangePassword;
 }
 
 <div class="container">
@@ -63,8 +63,8 @@
                     <div class="row">
                         <div class="form-group">
                             <div class="col-md-offset-5 col-md-10">
-                                <input type="reset" value="@Resources.Buttons.Clear" class="btn btn-default"/>
-                                <input type="submit" value="@Resources.Buttons.Submit" class="btn btn-default"/>
+                                <input type="reset" value="@ButtonsLabels.Clear" class="btn btn-default"/>
+                                <input type="submit" value="@ButtonsLabels.Submit" class="btn btn-default"/>
                             </div>
                         </div>
                     </div>
