--- a/Web/NbuReservationSystem.Web/Views/Account/ForgotPassword.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
-﻿@using Labels = NbuReservationSystem.Web.App_GlobalResources.Account.AccountLabels
-@model NbuReservationSystem.Web.ViewModels.Account.ForgotPasswordViewModel
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@model NbuReservationSystem.Web.Models.Requests.Account.ForgotPasswordViewModel
 @{
-    ViewBag.Title = Labels.ForgottenPassword;
+    ViewBag.Title = AccountLabels.ForgottenPassword;
 }
 
 
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-28">
 
-            <h2 class="text-center">@Labels.ForgottenPassword</h2>
+            <h2 class="text-center">@AccountLabels.ForgottenPassword</h2>
             <hr />
 
             @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
@@ -17,14 +17,15 @@
                 @Html.AntiForgeryToken()
 
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                    @Html.LabelFor(m => m.Email, AccountLabels.Email, new { @class = "col-md-2 control-label" })
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Email)
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" class="btn btn-default" value="@Labels.Submit" />
+                        <input type="submit" class="btn btn-default" value="@AccountLabels.Submit" />
                     </div>
                 </div>
             }
