--- a/Web/NbuReservationSystem.Web/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/Web/NbuReservationSystem.Web/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,13 +1,14 @@
-﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
+﻿@using NbuReservationSystem.Web.App_GlobalResources.Labels
+@{
+    ViewBag.Title = AccountLabels.NextStep;
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-28">
+            <br/>
+            <p>@AccountLabels.ForgottenPasswordMailSent</p>
+        </div>
+    </div>
 </div>
-	
+
